@@ -1,3 +1,9 @@
+2002-04-01  Terry Biggs <tbiggs@users.sourceforge.net>
+
+	* fixed detach interlinear crash when Main Text module
+	  is duplicated in interlinear.
+
+
 2002-03-30  Terry Biggs <tbiggs@users.sourceforge.net>
 
 	* removed on_link2_clicked from gs_html.c because
